# hands_on_rust

./: README.md
backpack/: Cargo.toml
backpack/src/: actors.rs  main.rs
backpack/src/actors/: tests.rs
bin-search/: Cargo.toml  index.html  index.js
bin-search/src/: binding.rs  lib.rs
brute_force/brute_force_arr/: Cargo.toml
brute_force/brute_force_arr/src/: main.rs  walker.rs
brute_force/pattern_searcher/: Cargo.toml
brute_force/pattern_searcher/src/: handler.rs  main.rs  matches.rs
brute_force/pattern_searcher/static/: behavior.js  index.html  style.css
cesar_cypher/: Cargo.toml
cesar_cypher/src/: data.rs  lib.rs  main.rs  output.rs
cesar_encryptation/: Cargo.toml
cesar_encryptation/src/: data.rs  lib.rs  main.rs  report.rs
complx_app/: Cargo.toml
complx_app/src/: args.rs  main.rs  problems.rs
complx_app/src/problems/: jump_optim.rs  menu_optim.rs  score_optim.rs
hill_cypher/src/: data.rs  error.rs  main.rs  process.rs
sorting_algos_test/: Cargo.toml
sorting_algos_test/benches/: averange_case_benches.rs  best_case_benches.rs  sorting_benches.rs  worst_case_benches.rs
sorting_algos_test/benches/common/: mod.rs
sorting_algos_test/src/: lib.rs
