[package]
name = "cesar_cypher"
authors = ["MrFixThis <mrfixthis55@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "0.7.20"

# Target for building a binary image for windows
[target.x86_64-pc-windows-gnu]
linker = "mingw-w64-gcc"
