[package]
name = "sorting_algos_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rayon = "1.6.1"
binary_search_tree = "0.2.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "best_case_benches"
harness = false

[[bench]]
name = "averange_case_benches"
harness = false

[[bench]]
name = "worst_case_benches"
harness = false
