[package]
name = "pattern_searcher"
authors = ["MrFixThis <mrfixthis55@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-files = "0.6.2"
serde = { version = "1.0.159", features = ["derive"]}
serde_json = "1.0.95"
anyhow = "1.0.70"
